--- a/public/stylesheets/pages/index.scss
+++ b/public/stylesheets/pages/index.scss
@@ -277,6 +277,7 @@
       h3 {
         display: inline-block;
         position: absolute;
+        white-space: nowrap;
         @include centerXY();
         top: 35%;
         &:before,
